[tool]
[tool.poetry]
name = "make_distribution"
version = "0.2.0"
homepage = "https://github.com/tadamcz/make_distribution_python_client"
description = "Top-level package for MakeDistribution.com Python client."
authors = ["Tom Adamczewski <tadamczewskipublic@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "make_distribution" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
requests = "^2.31.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
bump2version = "*"
coverage = "*"
pytest = ">=7.2.0"
pytest-pycharm = "*"

black = {extras = ["d"], version = "*"}



[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
